tests/fixtures/errors/e0411_array_element_type.mimz
// expect: E0411
bundle B { a: bit }
fn f(vals: B[4]) -> bit {
  0
}
module M {
  out o: bit
  o = 0
}
